salesforce-port/force-app/main/default/objects/Distance_Rate__c/Distance_Rate__c.object-meta.xml
<CustomObject>
    <label>Distance Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distance Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>