salesforce-port/force-app/main/default/objects/Distance_Rate__c/fields/Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Unit__c</fullName>
    <label>Rate Per Unit</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>4</scale>
    <required>true</required>
</CustomField>