salesforce-port/force-app/main/default/objects/Distance_Rate__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>mi</fullName><default>true</default><label>Mile</label></value>
            <value><fullName>km</fullName><default>false</default><label>Kilometer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>